fix overflow, space in cell

--- a/src/styles/components/table.scss
+++ b/src/styles/components/table.scss
@@ -48,6 +48,7 @@
     border-top: 0;
     border-left: 0;
     white-space: nowrap;
+    overflow: hidden;
     outline: none;
     display: flex;
     &:hover:not(.selected) {
